fix: janky scrolling on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,6 @@ iframe {
 }
 
 #root {
-  overflow-y: auto;
-  overflow-y: overlay;
   position: absolute;
   height: calc(100vh - 4rem);
   width: 100%;
@@ -28,9 +26,9 @@ html {
 
 body {
   min-height: 100vh;
-  font-family: Muli, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nexa Light', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
